API - delete method

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <tr>
           <th><button
                   id="imageBtn"
-                  class="buttons btn-primary"
+                  class="button btn-primary"
                   style="width:100px"
                   type="button"
                   onclick="onLogoButtonClick()"
@@ -42,7 +42,7 @@
         <tbody></tbody>
       </table>
       <div>
-        <button class="buttons add" type="button">Dodaj kurs</button>
+        <button class="button add" type="button">Dodaj kurs</button>
       </div>
     </article>
   </section>
@@ -52,6 +52,8 @@
   </footer>
   <script src="js/getMethod.js"></script>
   <script>getCourses()</script>
-  <script src="js/buttonClick.js"></script>
+  <script src="js/logoBtn.js"></script>
+  <script src="js/deleteMethod.js"></script>
+  <script src="js/putMethod.js"></script>
   </body>
 </html>
