API - delete method with refresh main page

--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
   <script src="js/logoBtn.js"></script>
   <script src="js/deleteMethod.js"></script>
   <script src="js/putMethod.js"></script>
+  <script src="js/refreshPage.js"></script>
   </body>
 </html>
