--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="css/images.css"/>
     <link rel="stylesheet" href="css/mainPage.css"/>
     <link rel="stylesheet" href="css/tableStyle.css"/>
+    <link rel="stylesheet" href="css/popupFormAdd.css"/>
   </head>
 
   <body>
+  <div class="overlay"></div>
   <header>
   </header>
   <section>
@@ -42,19 +44,60 @@
         <tbody></tbody>
       </table>
       <div>
-        <button class="button add" type="button">Dodaj kurs</button>
+        <button class="button add" type="button" onclick="showPopupAddCourse()">Dodaj kurs</button>
       </div>
     </article>
   </section>
+
+  <div class="popup_addCourse">
+    <form class="addCourse">
+      <div class="form_box">
+        <label for="add_name">Nazwa kursu:</label>
+        <input id="add_name" type="text" placeholder="Wpisz nazwę kursu"/>
+        <p class="error_add"></p>
+      </div>
+      <div class="form_box">
+        <label for="add_category">Kategoria:</label>
+        <select id="add_category">
+          <option value="0" disabled selected> -- wybierz kategorię -- </option>
+          <option value="Development">Development</option>
+          <option value="Testing">Testing</option>
+          <option value="Scrum">Scrum</option>
+          <option value="UX">UX</option>
+        </select>
+        <p class="error_add"></p>
+      </div>
+      <div class="form_box">
+        <label for="add_duration">Czas trwania kursu:</label>
+        <input id="add_duration" type="number" min="1" placeholder="Wpisz ilość dni trwania kursu"/>
+        <p class="error_add"></p>
+      </div>
+      <div class="form_box">
+        <label for="add_price">Cena:</label>
+        <input id="add_price" type="number" min="1" placeholder="Wpisz koszt kursu"/>
+        <p class="error_add"></p>
+      </div>
+      <div class="form_box">
+      <label for="add_rating">Ocena:</label>
+      <input id="add_rating" type="number" min="1" placeholder="Wpisz ocenę kursu"/>
+      <p class="error_add"></p>
+    </div>
+      <div class="create_course">
+        <button class="button create"><span>Stwórz kurs</span></button>
+      </div>
+    </form>
+  </div>
   <div id="root"></div>
   <footer>
     <small>Created by: © MalaGosha. All rights reserved.</small>
   </footer>
-  <script src="js/getMethod.js"></script>
+  <script src="js/getAllCourses.js"></script>
   <script>getCourses()</script>
   <script src="js/logoBtn.js"></script>
   <script src="js/deleteMethod.js"></script>
-  <script src="js/putMethod.js"></script>
+  <script src="js/editCourse.js"></script>
   <script src="js/refreshPage.js"></script>
+  <script src="js/addCourse.js"></script>
+  <script src="js/classCourse.js"></script>
   </body>
 </html>
